After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 80126 - vlookup range can't contain twice or more rows than what actually contains data
vlookup range can't contain twice or more rows than what actually contains data
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Main System
1.0.x
Other other
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2002-04-28 15:17 UTC by Jakub Steiner
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
example sheet using the vlookup function (created in 1.0.4) (1.52 KB, application/x-gzip)
2002-04-28 15:19 UTC, Jakub Steiner
Details

Description Jakub Steiner 2002-04-28 15:17:41 UTC
vlookup() function returns 0 if you have range that contains twice as much
row as the range containing data. (One needs to define a larger range for
aditiona data rows being added in time without the need to alter the
expression). 

Best way to describe this problem is by looking at the attached sheet. The
D12 cell contains a function =vlookup(4;A1:B24;2). This is the last range
when it works correctly on data in A1:B12 (returning D). Change the
expression to =vlookup(4;A1:B25;2) and it will return 0 instead of 'D'.
Comment 1 Jakub Steiner 2002-04-28 15:19:30 UTC
Created attachment 8003 [details]
example sheet using the vlookup function (created in 1.0.4)
Comment 2 Andreas J. Guelzow 2002-05-09 17:35:26 UTC
THis is only a problem for @approcimate == TRUE (the default if
@approximate is not given.)
Comment 3 Andreas J. Guelzow 2002-05-09 19:02:04 UTC
Fixed in cvs-head.  The fix consists essentially of replacing
value_area_fetch_x_y with value_area_get_x_y in find_index_bisection
and removing a check for NULL.

Perhaps we should back-port this? 
Comment 4 Jody Goldberg 2002-05-09 20:52:23 UTC
Sounds like a good candidate for back porting.